samples/_failures_safe/1761562842_7813f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f587d172.c: In function ‘main’:
./samples/SAFE/__tmp_f587d172.c:130:5: error: expected expression at end of input
  130 |     if (
      |     ^~
./samples/SAFE/__tmp_f587d172.c:130:5: error: expected declaration or statement at end of input
